# FusedANN-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  check_gt.py  dataset_io.py  datasets.py  fusedann_common.h  fusedann_efanna.cpp  fusedann_parlayann.cpp
.github/: copilot-instructions.md
docs/: fusedann_10m_fixed_sweep.txt  fusedann_10m_gcp_sweep.txt  parlayivf_10m_gcp_sweep.txt  parlayivf_10m_sweep.txt  sift1m_sweep.txt
scripts/: analyze_yfcc_recall.py  bigann_sift1m_dataset.patch  check_yfcc_groundtruth.py  compare_sift1m_docker.sh  compare_sift1m_parlay_only.sh  get_dataset_info.py  plot_gcp_repro_tradeoff.py  plot_sift_tradeoff.py  plot_yfcc_tradeoff.py  prepare_dataset.py  prepare_sift1m_bigann.py  process_sift1m.py  run_bigann_filter_pipeline.sh  run_parlayivf_yfcc.py  run_pipeline.sh  run_sift1m_all_methods.sh  run_sift1m_filter_benchmarks.sh  run_sift1m_pipeline.sh  test_sift1m_partition_recall.py  verify_sift1m_shapes.py
